syntax = "proto3";

package ocf.cloud.identitystore.pb;

import "github.com/plgd-dev/cloud/identity-store/pb/devices.proto";

option go_package = "github.com/plgd-dev/cloud/identity-store/pb;pb";

service IdentityStore {
	rpc GetDevices (GetDevicesRequest) returns (stream Device) {}

	rpc AddDevice(AddDeviceRequest) returns (AddDeviceResponse) {}
	rpc DeleteDevices(DeleteDevicesRequest) returns (DeleteDevicesResponse) {}
}
